Consolidate runtime security and platform updates